fix wechat account name

--- a/my.config
+++ b/my.config
@@ -26,7 +26,7 @@ _config_wechat[Col.STATUS] = u"当前状态"
 # _default_account负责定义默认账户
 _default_account_alipay = "Assets:VirtualCard:Alipay"
 
-_default_account_wechat = "Assets:VirtualCard:Wechat"
+_default_account_wechat = "Assets:VirtualCard:WeChat"
 
 # _currency定义货币单位
 _currency = "CNY"
@@ -44,7 +44,10 @@ _assets_account["招行信用卡|0000"] = "Liabilities:CreditCard:CMB"
 _assets_account["招行储蓄卡|1111"] = "Assets:Bank:CMB"
 _assets_account["支付宝"] = "Assets:VirtualCard:Alipay"
 _assets_account["余额宝"] = "Assets:MoneyFund:Yuebao"
-_assets_account["微信"] = "Assets:VirtualCard:Wechat"
+_assets_account["零钱"] = "Assets:VirtualCard:WeChat"
+_assets_account["/"] = "Assets:VirtualCard:WeChat"
+_assets_account["1450"] = "Liabilities:CreditCard:BOC:UnionPay"
+_assets_account["1243"] = "Assets:Bank:CMB"
 _assets_account["零钱通"] = "Assets:MoneyFund:ChangeTong"
 
 
@@ -53,18 +56,18 @@ _assets_account["零钱通"] = "Assets:MoneyFund:ChangeTong"
 # 多个关键词用竖线分割，只要当交易为“支出”，且交易对方名称和商品名称中出现该关键词，就把该交易分类为对应支出。
 _debit_account = {}
 _debit_account["DEFAULT"] = "Expenses:Other"
-_debit_account["iCloud|腾讯云|阿里云"] = "Expenses:Tech:Subscription"
-_debit_account["App Store|Steam|会员"] = "Expenses:Fun:SoftwareAndGame"
+_debit_account["iCloud|腾讯云|阿里云"] = "Expenses:Digital:Other"
+_debit_account["App Store|Steam|会员"] = "Expenses:Digital:Other"
 _debit_account["全时|华联|家乐福|超市|红旗|WOWO|百货|伊藤|永旺|全家"] = "Expenses:Other"
-_debit_account["汽车票|蒜芽信息科技|优步|火车|动车|空铁无忧网|滴滴|汽车|运输|机场|航空|机票|高铁|出行|车费|打车"] = "Expenses:Travelling"
+_debit_account["汽车票|蒜芽信息科技|优步|火车|动车|空铁无忧网|滴滴|汽车|运输|机场|航空|机票|高铁|出行|车费|打车"] = "Expenses:Transportation:Other"
 _debit_account["捐赠"] = "Expenses:PublicWelfare"
 _debit_account["话费|流量|手机|中国移动"] = "Expenses:Bills:Phone"
 _debit_account["电影"] = "Expenses:Fun:Amusement"
-_debit_account["地铁"] = "Expenses:Travelling:TransportCard"
+_debit_account["地铁"] = "Expenses:Transportation:Bus"
 _debit_account["衣|裤|鞋"] = "Expenses:Clothing:Clothes"
 _debit_account["造型"] = "Expenses:Dressup:Maintain"
-_debit_account["医院|药房"] = "Expenses:Health:Hospital"
-_debit_account["酒店"] = "Expenses:House:Hotel"
+_debit_account["医院|药房"] = "Expenses:Health:Medical"
+_debit_account["深圳市枫叶酒店投资有限公司-消费"] = "Expenses:Bills:Internet"
 _debit_account["借款"] = "Assets:Receivables"
 _debit_account["蚂蚁财富"] = "Assets:MoneyFund:BondFund"
 
@@ -91,6 +94,5 @@ CONFIG = [
            DRCR_dict=_DRCR_dict,
            assets_account=_assets_account,
            debit_account=_debit_account,
-           credit_account=_credit_account,
-           skip_lines=16)
+           credit_account=_credit_account)
 ]
