fix alipay column name

--- a/my.config
+++ b/my.config
@@ -9,7 +9,7 @@ _config_alipay = {}
 _config_alipay[Col.DATE] = u"交易创建时间"
 _config_alipay[Col.PAYEE] = u"交易对方"
 _config_alipay[Col.NARRATION] = u"商品名称"
-_config_alipay[Col.REMARK] = u"账户备注"
+_config_alipay[Col.REMARK] = u"备注"
 _config_alipay[Col.AMOUNT] = u"金额（元）"
 _config_alipay[Col.DRCR] = u"收/支"
 _config_alipay[Col.STATUS] = u"资金状态"
